update invoice type 1

--- a/invoiceType1/invoice-v1.html
+++ b/invoiceType1/invoice-v1.html
@@ -6,7 +6,7 @@
         alt="ambratect-logo" />
       <div class="mt-20 border-primary flex content-between">
         <div class="flex content-center flex-1 py-10">
-          <h1 class="font-lg spacing-lg">{{ content.monthlyStatement }}</h1>
+          <h1 class="font-lg spacing-lg">[[ content.monthlyStatement ]]</h1>
         </div>
         <div class="flex align-items-center px-30 bg-color-black">
           <p class="font-md color-background weight-semi-bold">[[data.date]]</p>
